[package]
name = "cachoeira_core"
version = "0.1.0"
authors = ["Tiago Rezende <tiagosr@gmail.com>"]
description = "Cachoeira framework core"

[dependencies]
cgmath = { version = "0.16", features = ["serde", "mint"] }
error-chain = "0.11"
fnv = "1.0"
hibitset = { version = "0.5.0", features = ["parallel"] }
log = "0.4"
rayon = "1.0.1"
serde = { version = "1", features = ["serde_derive"] }
shred = { version = "0.7.0-alpha5" }
specs = { version = "0.11.0-alpha5", features = ["common"] }
specs-hierarchy = { version = "0.1.0-alpha5" }
quickcheck = "0.4.1"
libloading = "0.5.0"

thread_profiler = { version = "0.1", optional = true }

[features]
profiler = ["thread_profiler/thread_profiler"]
nightly = ["shred/nightly"]